# BBBArch-Scripts

./: .gitignore  README.md  pyproject.toml
doc/: CLR-Ceiling-Heights.md
scripts/CLRCeilingHeights (Syned in BBB Toolbar)/: README.md
scripts/CLRCeilingHeights (Syned in BBB Toolbar)/CLRCeilingHeights.pulldown/Configure.pushbutton/: bundle.yaml
scripts/CLRCeilingHeights (Syned in BBB Toolbar)/lib/: clr_ceiling_config.py
scripts/CLRCeilingHeights/CLRCeilingHeights.pulldown/: bundle.yaml
scripts/ContentConformanceAudit/: README.md
scripts/ContentConformanceAudit/benchmark/: analyze_benchmark.py  export_notion_to_excel.py  report_template.html
scripts/ContentConformanceAudit/notion/: add_to_revit_families.py  add_types_column.py  create_bathroom_db.py  create_kitchen_db_and_import.py  fix_filesize_kb_column.py  omit_system_families.py  set_proposed_names_bathroom.py  set_proposed_names_kitchen.py  simple_table_sync_reference.py
scripts/ContentConformanceAudit/reorg/: dedupe_and_rename.py  execute_reorg.py  final_rename_fixes.py  plan_reorg.py  rename_unit_families.py
scripts/FamilyBenchmark (Synced in Frank Tools)/: README.md
scripts/Frank Tools.extension/: BBB_SharedParams.txt  README.md
scripts/Frank Tools.extension/Frank Tools.tab/: bundle.yaml
scripts/Frank's Tool.extension/: README.md
scripts/SyncAuditedFamilies/: README.md  Sync-AuditedFamilies.ps1
scripts/_template/: README.md  template.py
scripts/powershell/: Sync-ApprovedFamilies.ps1
scripts/pyrevit/FamilyBenchmark/: README.md  script.py
(+24 files in other folders)
